--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
   </header>
 
   <main class="container">
-    <section class="hero">
-      <h1>REAL HELP. REAL TOOLS. NO LEGALESE.</h1>
-      <div class="sub">Plain-language guides, courtroom scripts, and downloads that help you win.</div>
-    </section>
+     <section id="hero" aria-label="Sovereign Academy hero"> 
+<p id="top-line">ReelHelp • ReelTools • NoLegalese</p> 
+<div id="sage-logo">SAGE</div> 
+<div class="tagline">Ask Sage • Your AI with claws — code & a cause</div> 
+<h2 id="site-tagline">REAL HELP. REAL TOOLS. NO LEGALESE.</h2> <p class="subline">Plain-language guides • Printable forms • On-page AI help</p> </section>
 
     <section id="ask-sage-panel" aria-label="Ask Sage">
       <iframe src="sage-chatbot.html" title="Ask Sage"></iframe>
