--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
       display:flex; align-items:center; justify-content:space-between;
       padding: 14px 16px;
     }
+  
     header.site .brand { font-weight: 800; letter-spacing: .5px; }
     nav.top a.nav-home { text-decoration:none; font-weight:700; }
     .hero { text-align:center; padding: 28px 16px 8px; }
-    .hero h1 {
+    .hero h1
+     <div id="sage-hero">SAGE</div> 
+    {
       margin: 0 0 8px 0;
       font-size: clamp(28px, 4.5vw, 54px);
       letter-spacing:.6px;
     }
-    .sub { opacity:.9; margin-bottom: 16px; }
+     sub { opacity:.9; margin-bottom: 16px; }
     .container { max-width:1120px; margin:0 auto; padding: 0 16px 40px; }
 
     /* Ask Sage panel */
