--- a/download-hub.html
+++ b/download-hub.html
@@ -27,94 +27,4 @@
     .hero { background: radial-gradient(1100px 540px at 70% -200px, rgba(0,255,140,0.12), transparent), #0b0b0b; color:#eafff2; text-align:center; padding: 3.2rem 1rem 2rem; border-bottom:1px solid rgba(0,255,140,0.15); }
     .hero h1 { font-size: clamp(1.8rem, 5vw, 3rem); margin: 0 0 .5rem; }
     .container { max-width: 1000px; margin: 0 auto; padding: 1.25rem; }
-    nav.top { background:#111a1a; border-bottom:1px solid rgba(0,255,140,0.15); position: sticky; top:0; z-index:1000; }
-    nav.top .inner { display:flex; align-items:center; justify-content:space-between; gap:.75rem; padding:.6rem 1rem; }
-    nav.top a { color:#d7ffe6; text-decoration:none; font-weight:600; }
-    nav.top .links a { margin: 0 .5rem; opacity:.95; }
-    .card { background: rgba(255,255,255,0.02); border:1px solid rgba(0,255,140,0.12); border-radius:16px; padding:1rem 1rem 1.25rem; box-shadow: 0 6px 24px rgba(0,0,0,.25); }
-    .grid { display:grid; gap:1rem; }
-    @media (min-width: 880px){ .grid.cols-2{ grid-template-columns: 1fr 1fr; } }
-    .btn { display:inline-block; padding:.6rem .9rem; border-radius:10px; border:1px solid rgba(0,255,140,.25); background:rgba(0,255,140,.06); color:#d7ffe6; text-decoration:none; font-weight:600; }
-    footer { margin-top:2rem; padding:2rem 1rem; border-top:1px solid rgba(0,255,140,.15); text-align:center; color:#c9ffdf; }
-  </style>
-</head>
-<body>
-  <!-- Top Nav (standard, no Topics) -->
-<header class="site container"> 
-<div class="brand">Sovereign Academy</div> <nav class="top"> 
-<a href="index.html" class="nav-home">Home</a> </nav> 
-</header>
-  
-  <!-- Hero -->
-  <header class="hero" role="banner">
-    <div class="container">
-      <h1>📥 Download Hub</h1>
-      <p><em>Grab the exact legal tools you need—checklists, scripts, and motion templates. No fluff.</em></p>
-      <div style="margin-top: 1.1rem; display:flex; gap:.6rem; justify-content:center; flex-wrap:wrap;">
-        <input id="smartSearch" onkeyup="smartNavigate(this.value)" placeholder="Search legal topics…" type="search" style="padding:12px 14px; min-width:260px; width:min(740px,72vw); border-radius:10px; border:1px solid rgba(0,255,140,.25); background:#0f1313; color:#eafff2;" />
-        <button onclick="startVoiceSearch()" class="btn" aria-label="Start voice search">🎤 Voice</button>
-      </div>
-    </div>
-  </header>
-
-  <main id="content" class="container grid" style="grid-template-columns: 1fr; gap:1.25rem;">
-
-    <!-- Court Prep -->
-    <section class="card" aria-labelledby="court-h2">
-      <h2 id="court-h2">🧑‍⚖️ Court Prep</h2>
-      <ul>
-        <li><a href="court-prep-checklist.pdf" download>Court‑Day Checklist (PDF)</a></li>
-        <li><a href="courtroom-scripts.pdf" download>Courtroom Scripts (PDF)</a></li>
-        <li><a href="courtroom-scripts.docx" download>Courtroom Scripts (DOCX)</a></li>
-      </ul>
-    </section>
-
-    <!-- DSS / CPS -->
-    <section class="card" aria-labelledby="dss-h2">
-      <h2 id="dss-h2">🛡️ DSS & CPS Defense</h2>
-      <ul>
-        <li><a href="dss-demand-records.docx" download>DSS / CPS Records Demand (DOCX)</a></li>
-        <li><a href="dss-recap-email.docx" download>Same‑Day Recap Email (DOCX)</a></li>
-        <li><a href="motion-to-compel-docs.docx" download>Motion to Compel Case Documents (DOCX)</a></li>
-        <li><a href="motion-to-dismiss-insufficient-evidence.docx" download>Motion to Dismiss — Insufficient Evidence (DOCX)</a></li>
-        <li><a href="motion-to-exclude-hearsay.docx" download>Motion to Exclude Hearsay (DOCX)</a></li>
-        <li><a href="motion-for-ada-accommodations.docx" download>Motion for ADA Accommodations (DOCX)</a></li>
-      </ul>
-    </section>
-
-    <!-- LLC / Trust -->
-    <section class="card" aria-labelledby="llc-h2">
-      <h2 id="llc-h2">🏢 LLC & Trust</h2>
-      <ul>
-        <li><a href="llc-checklist.pdf" download>LLC Formation Checklist (PDF)</a></li>
-      </ul>
-    </section>
-
-    <!-- Restore Rights (placeholder) -->
-    <section class="card" aria-labelledby="restore-h2">
-      <h2 id="restore-h2">🔑 Restore Rights</h2>
-      <ul>
-        <li><a href="restore-rights-guide.pdf" download>Restore Your Rights — Starter Guide (PDF)</a></li>
-      </ul>
-    </section>
-
-  </main>
-
-  <!-- Floating Ask Sage (iframe) -->
-  <iframe id="sageChatWindow" title="Ask Sage Chat" src="sage-chatbot.html" style="position:fixed; bottom:18px; right:18px; width:340px; height:460px; border:none; z-index:999; box-shadow:0 10px 26px rgba(0,0,0,.55); border-radius:14px; overflow:hidden;"></iframe>
-
-  <footer>
-    © Sovereign Academy — Built by Gina Lopez & Sage (your AI with claws). Education only; not legal advice.
-  </footer>
-
-  <script>
-    window.SageBotConfig = {
-      voice: true,
-      greetMessage: "Tell me what you’re downloading—I’ll tailor it to your case.",
-      placeholder: "Ask Sage for a custom motion, script, or checklist…",
-      theme: "dark"
-    };
-  </script>
-  <script src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js"></script>
-</body>
-</html>
+    nav.top { background:#
