--- a/download-hub.html
+++ b/download-hub.html
@@ -60,14 +60,14 @@
   <main id="content" class="container grid" style="grid-template-columns: 1fr; gap:1.25rem;">
 
     <!-- Court Prep -->
-    <section class="card" aria-labelledby="court-h2">
-      <h2 id="court-h2">🧑‍⚖️ Court Prep</h2>
-      <ul class="downloads">
-        <li><a href="download-hub/court-prep-checklist.pdf" download>Court-Day Checklist (PDF)</a></li>
-        <!-- Optional online viewer if you want it visible -->
-        <!-- <li><a href="download-hub/court-prep-checklist.html">Court-Day Checklist (View Online)</a></li> -->
-      </ul>
-    </section>
+   <section class="card" aria-labelledby="court-h2">
+  <h2 id="court-h2">🧑‍⚖️ Court Prep</h2>
+  <ul class="downloads">
+    <li><a href="download-hub/court-prep-checklist.pdf" download>Court-Day Checklist (PDF)</a></li>
+    <li><a href="download-hub/courtroom-scripts.html">Courtroom Scripts (View Online)</a></li>
+    <li><a href="download-hub/courtroom-scripts.pdf" download>Courtroom Scripts (PDF)</a></li>
+  </ul>
+</section>
 
     <!-- DSS / CPS -->
     <section class="card" aria-labelledby="dss-h2">
